# FastAPI_CRUD

./: .gitignore  README.md  pyproject.toml
config/: cfg.ini  db.py
etl_project/: main.py
models/: users.py
routers/: users.py
schemas/: user.py
